Adicionando bandeira dos países.

--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pratica Resumo da Copa</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
-    <script src="index.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pratica Resumo da Copa</title>
+  <link rel="stylesheet" type="text/css" href="estilo.css">
+  <script src="index.js"></script>
 </head>
+
 <body>
 
-<div class="grid-container">
-  <div class="grid-item">
-    <h3> Argentina</h3>
-    <p>Argentina foi a campeã da copa do mundo do Catar. 
-      Confira o resumo da participação da seleção do Messe rumo a glória de ser campeão.</p>
-    <a href="" class="btn_resumo">Acessar resumo</a>
-  </div>
-  
-  <div class="grid-item">
-    <h3>França</h3>
-    <p>Depois de uma ótima participação, a França perde na final e fica com o segundo lugar. 
-      Confira o resumo da participação da seleção do Messe rumo a glória de ser campeão.</p>
+  <div class="grid-container">
+    <div class="grid-item">
+      <img src="http://www.bandeiras-nacionais.com/media/67/bandeira-argentina.png" alt="Bandeira da Argentina" width="350px" height="220px">
+      <h3> Argentina</h3>
+      <p>Argentina foi a campeã da copa do mundo do Catar.
+        Confira o resumo da participação da seleção do Messe rumo a glória de ser campeão.</p>
       <a href="" class="btn_resumo">Acessar resumo</a>
+    </div>
+
+    <div class="grid-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkdeftwXI13OD1XlCnH8ln_RqaswKGNk8N2w&usqp=CAU" alt="Bandeira da França" width="350px" height="220px">
+      <h3>França</h3>
+      <p>Depois de uma ótima participação, a França perde na final e fica com o segundo lugar.
+        Confira o resumo da participação da seleção do Messe rumo a glória de ser campeão.</p>
+      <a href="" class="btn_resumo">Acessar resumo</a>
+    </div>
+
+    <div class="grid-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSb8mTKxGRr_IHLm70dYQ_S-fCGbPOO_4OBTg&usqp=CAU" alt="Bandeira da Croácia" width="350px" height="220px">
+      <h3>Croácia</h3>
+      <p>Com mais uma grande participação em copas, a Croácia eliminou o Brasil, mas acabou ficando em terceiro.
+        Confira o resumo da participação da seleção do Messe rumo a glória de ser campeão.</p>
+      <a href="" class="btn_resumo">Acessar resumo</a>
+    </div>
   </div>
 
-  <div class="grid-item">
-    <h3>Croácia</h3>
-    <p>Com mais uma grande participação em copas, a Croácia eliminou o Brasil, mas acabou ficando em terceiro. 
-      Confira o resumo da participação da seleção do Messe rumo a glória de ser campeão.</p>
-    <a href="" class="btn_resumo">Acessar resumo</a>
-    </div>  
-</div>
 
-   
-    
+
 </body>
+
 </html>
