--- a/index.html
+++ b/index.html
@@ -9,51 +9,76 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <div class="grid-container">
-      <div class="grid-item">
-        <h3>Argentina</h3>
-        <p>
-          Argentina foi a campeã da copa do mundo do Catar. Confira o resumo da
-          participação da seleção do Messe rumo a glória de ser campeão.
-        </p>
-        <a href="" class="btn_resumo">Acessar resumo</a>
-      </div>
+    <main class="main-bg">
+      <div class="main content">
+        <div class="main-content">
+          <div>
+            <!-- ESPAÇO PARA COLOCAR A BANDEIRA DO PAÍS -->
+            <div class="bandeira">
+              <img src="" alt="" />
+            </div>
+            <h1>Argentina</h1>
+            <p>
+              Argentina foi a campeã da copa do mundo do Catar. Confira o resumo
+              da participação da seleção do Messe rumo a glória de ser campeão.
+            </p>
+          </div>
+          <a href="" class="btn_resumo">Acessar resumo</a>
+        </div>
 
-      <div class="grid-item">
-        <h3>França</h3>
-        <p>
-          Depois de uma ótima participação, a França perde na final e fica com o
-          segundo lugar. Confira o resumo da participação da seleção do Messe
-          rumo a glória de ser campeão.
-        </p>
-        <a href="" class="btn_resumo">Acessar resumo</a>
-      </div>
+        <div class="main-content">
+          <div>
+            <!-- ESPAÇO PARA COLOCAR A BANDEIRA DO PAÍS -->
+            <div class="bandeira">
+              <img src="" alt="" />
+            </div>
+            <h1>França</h1>
+            <p>
+              Depois de uma ótima participação, a França perde na final e fica
+              com o segundo lugar. Confira o resumo da participação da seleção
+              do Messe rumo a glória de ser campeão.
+            </p>
+          </div>
+          <a href="" class="btn_resumo">Acessar resumo</a>
+        </div>
 
-      <div class="grid-item">
-        <h3>Croácia</h3>
-        <p>
-          Com mais uma grande participação em copas, a Croácia eliminou o
-          Brasil, mas acabou ficando em terceiro. Confira o resumo da
-          participação da seleção do Messe rumo a glória de ser campeão.
-        </p>
-        <a href="" class="btn_resumo">Acessar resumo</a>
-      </div>
+        <div class="main-content">
+          <div>
+            <!-- ESPAÇO PARA COLOCAR A BANDEIRA DO PAÍS -->
+            <div class="bandeira">
+              <img src="" alt="" />
+            </div>
+            <h1>Croácia</h1>
+            <p>
+              Com mais uma grande participação em copas, a Croácia eliminou o
+              Brasil, mas acabou ficando em terceiro. Confira o resumo da
+              participação da seleção do Messe rumo a glória de ser campeão.
+            </p>
+          </div>
+          <a href="" class="btn_resumo">Acessar resumo</a>
+        </div>
 
-      <div class="grid-item">
-        <h3>Marrocos</h3>
-        <p>
-          Marrocos fez história na Copa do Mundo 2022. A seleção marroquina
-          terminou o torneio na quarta colocação e passa a ser dona da melhor
-          campanha africana na história do Mundial. Antes de 2022, o país nunca
-          havia passado das oitavas de final.
-        </p>
-        <a
-          href="https://www.lance.com.br/copa-do-mundo/marrocos/marrocos-na-copa-do-mundo-relembre-a-melhor-campanha-do-pais-na-historia.html"
-          target="_blank"
-          class="btn_resumo"
-          >Acessar resumo</a
-        >
+        <div class="main-content">
+          <div>
+            <!-- ESPAÇO PARA COLOCAR A BANDEIRA DO PAÍS -->
+            <div class="bandeira">
+              <img src="" alt="" />
+            </div>
+            <h1>Marrocos</h1>
+            <p>
+              Marrocos fez história na Copa do Mundo 2022. A seleção marroquina
+              terminou o torneio na quarta colocação e passa a ser dona da
+              melhor
+            </p>
+          </div>
+          <a
+            href="https://www.lance.com.br/copa-do-mundo/marrocos/marrocos-na-copa-do-mundo-relembre-a-melhor-campanha-do-pais-na-historia.html"
+            target="_blank"
+            class="btn_resumo"
+            >Acessar resumo</a
+          >
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
