teste do caos bandeira frança

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div>
             <!-- ESPAÇO PARA COLOCAR A BANDEIRA DO PAÍS -->
             <div class="bandeira">
-              <img src="" alt="" />
+              <img src="https://static.todamateria.com.br/upload/fr/an/frana_a.jpg" alt="" />
             </div>
             <h1>França</h1>
             <p>
