--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p>
               Marrocos fez história na Copa do Mundo 2022. A seleção marroquina
               terminou o torneio na quarta colocação e passa a ser dona da
-              melhor
+              melhor campanha.
             </p>
           </div>
           <a
