Desfazendo modificações do teste

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <h1>Argentina</h1>
           <p>
-            Argentinaa foi a campeã da copa do mundo do Catar. Confira o resumo
+            Argentina foi a campeã da copa do mundo do Catar. Confira o resumo
             da participação da seleção do Messe rumo a glória de ser campeão.
           </p>
         </div>
