adicionado meu país CANADA e a pasta img para armazenar a imagem

--- a/index.html
+++ b/index.html
@@ -78,6 +78,32 @@
             >Acessar resumo</a
           >
         </div>
+        <!-- Bandeira do CANADÁ by InfoDevEstudent - Sergio Felipe -->
+        <div class="wrapper">
+          <div class="card front-face">
+            <img src="img/CanadaFlag.png" alt="BandeiraDoCanada">
+            <div class="title-front-face">
+              CANADÁ
+          </div>
+            <p>Os principais serviços de Canadá incluem turismo, finanças, comércio, tecnologia, serviços bancários e serviços governamentais.
+                É composto por 10 províncias e três territórios. O Canadá tem uma grande diversidade de pessoas que falam mais de 200 idiomas.
+                O Canadá é um país localizado no Norte da América do Norte, sendo o segundo maior país do mundo em área total.
+            </p>
+        </div>
+        <div class="card back-face">
+          <figure>
+              <img src="img/CanadaFlag.png" alt="BandeiraDoCanada">
+          </figure>
+          <div class="info">
+              <div class="title">
+                  CANADÁ
+              </div>
+              <p>
+                  Desenvolvimendo Web <br> Front-End
+              </p>
+          </div>
+      </div>
+        </div>
       </div>
     </main>
   </body>
