--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="card front-face">
             <img src="img/CanadaFlag.png" alt="BandeiraDoCanada">
             <div class="title-front-face">
-              CANADÁ
+              CANADA
           </div>
             <p>Os principais serviços de Canadá incluem turismo, finanças, comércio, tecnologia, serviços bancários e serviços governamentais.
                 É composto por 10 províncias e três territórios. O Canadá tem uma grande diversidade de pessoas que falam mais de 200 idiomas.
@@ -96,7 +96,7 @@
           </figure>
           <div class="info">
               <div class="title">
-                  CANADÁ
+                  CANADA
               </div>
               <p>
                   Desenvolvimendo Web <br> Front-End
